# applist_detector_flutter

android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
android/src/main/cpp/src/: environment.cpp
